2004-11-03  Andrew MacLeod  <amacleod@redhat.com>

	PR tree-optimization/18270
	* tree-outof-ssa.c (analyze_edges_for_bb): If a block has incoming
	abnormal edges, commit all pending stmts on incoming edges.

2004-11-03  Ulrich Weigand  <uweigand@de.ibm.com>

	* tree-ssa-loop-ivopts.c (get_address_cost): Offset zero does not
	cause extra costs.  Generate canonical RTL.

2004-11-02  Daniel Berlin  <dberlin@dberlin.org>

	* lambda-code.c (lambda_compute_auxillary_space): Update comments.
	(lambda_compute_target_space). Ditto.
	* lambda.h (lambda_trans_matrix): Ditto.
	(lambda_linear_expression): Ditto.
	(lambda_body_vector): Ditto.
	(lambda_loopnest): Ditto.
	* tree-loop-linear.c (gather_interchange_stats): Combine tests,
	update comments, and remove pointless addition of 0.
	(linear_transform_loops): Update comments.

2004-11-03  Sebastian Pop  <pop@cri.ensmp.fr>

	* tree.c (tree_fold_gcd): Use FLOOR_MOD_EXPR instead of
	CEIL_MOD_EXPR.

2004-11-03 Jeff Law  <law@redhat.com>

	* stmt.c (expand_case): Speed up code to detect duplicate case
	label targets and count unique case label targets.

2004-11-03  Kazu Hirata  <kazu@cs.umass.edu>

	* cppdefault.c, cppdefault.h, timevar.h: Update copyright.

2004-11-03  Kazu Hirata  <kazu@cs.umass.edu>

	* bitmap.h, dbxout.c, tree-mudflap.c: Fix comment formatting.

2004-11-03  Kazu Hirata  <kazu@cs.umass.edu>

	* tree-cfg.c (find_taken_edge): Abort if we are given a
	statement that is neither COND_EXPR nor SWITCH_EXPR.

2004-11-02  Zdenek Dvorak  <dvorakz@suse.cz>

	* fold-const.c (fold): Reassociate also (x - mult) + mult and
	(mult - x) + mult.  Cast operands of expression after applying
	distributive law to the correct types.  Apply distributive law
	to a * c - b * c for all non-float types.

2004-11-02  Geoffrey Keating  <geoffk@apple.com>

	* configure.ac: Don't clear STMP_FIXINC or STMP_FIXPROTO just
	because we don't want to run them now; instead, set them to
	stmp-install-fixproto or stmp-install-fixinc.